[package]
name = "project"
version = "0.1.0"
authors = ["martin"]

[dependencies]
coco = "0.3.3"
itertools = "0.7.4"
rand="0.3"
ansi-escapes = "0.1.0"
ncurses = "5.87.0"
piston2d-graphics="0.24.0"
piston2d-opengl_graphics="0.50.0"
piston="0.35.0"
pistoncore-sdl2_window = "0.47.0"
sdl2 = "0.31.0"

[lib]
name = "reactivers"
path = "src/lib.rs"

[[bin]]
name = "trafficsim"
path = "src/traffic_sim.rs"

[[bin]]
name = "gameoflife"
path = "src/game_of_life.rs"