[package]
name = "project"
version = "0.1.0"
authors = ["martin", "lucas"]

[dependencies]
# Dependencies for the library reactivers.
coco = "0.3.3"
itertools = "0.7.4"
rand="0.3"

# Additional dependencies for gameoflife application.
ansi-escapes = {version = "0.1.0", optional = true }
ncurses = {version = "5.87.0", optional = true }

# Additional dependencies for trafficsimulation application.
piston2d-graphics = {version ="0.24.0", optional = true }
piston2d-opengl_graphics = {version = "0.50.0", optional = true }
piston = {version = "0.35.0", optional = true }
pistoncore-sdl2_window = {version = "0.47.0", optional = true }
sdl2 = {version = "0.31.0", optional = true }

[lib]
name = "reactivers"
path = "src/lib.rs"

[features]
trafficsim = ["piston2d-graphics", "piston2d-opengl_graphics", "piston", "pistoncore-sdl2_window", "sdl2"]
gameoflife = ["ncurses", "ansi-escapes"]

[[bin]]
name = "trafficsim"
path = "src/traffic_sim.rs"
required-features = ["trafficsim"]

[[bin]]
name = "gameoflife"
path = "src/game_of_life.rs"
required-features = ["gameoflife"]

[[bin]]
name = "example"
path = "src/example.rs"